frontend/src/components/ManagmentComponents/CategoriesManagement/CategoriesGrid/index.css
.categories-management-grid{
    width: 100%;
    max-width: 1200px;
    height: 100%;
    min-height:60vh;
    display:grid;
    grid-template-columns: repeat(auto-fill, minmax(150px, 300px));
    gap: 20px;
    justify-content: center;
    align-items:start;
    margin:0 auto;
    padding:10px;
    position: relative;
    
}
.categories-management-card{
    width: 100%;
    height: 290px;   
    background-color: #fff;
    box-shadow: 2px 5px 10px rgb(202, 201, 201);
    border-radius: 5px;
    border: 2px solid rgba(212, 212, 212, 0.209);
    display: flex;
    flex-direction: column;
}

.categories-management-card .img-container {
    width: 100%;
    height: 65%;
    min-height: 65%;
    display: flex;
    align-items: top;
    justify-content: center;
    background: rgb(243 241 241);
    position: relative;
  }
  
.categories-management-card .img-container img{
    width: 100%;
    height: 100%;
    transition: 0.2s ease-in-out;
    display: flex;
    align-items: center;
    justify-content: center;
    object-fit: contain;
    mix-blend-mode: multiply;
    background-blend-mode: multiply;
  }

  .categories-management-card .img-container .checkbox-container{
    position: absolute;
    right: 5px;
    top:5px
  }

  .categories-management-card .name-container{
    width: 100%;
    height: 15%;
    display:flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    padding: 10px;
    gap:10px;
}

.categories-management-card .category-card-name{
    margin:0;
    margin-left: 15px;
    margin-top: 5px;
    color: #5c6475;
    font-size: 16px;
    font-style: normal;
    font-weight: 500;
    line-height: 21.245px;
    overflow: hidden;
    white-space: nowrap;
    text-overflow:ellipsis;
}

.categories-management-card .action-buttons-container{
    width: 100%;
    height:auto;
    padding: 10px;
    padding-left: 5px;
    display: flex;
    align-items: center;
    justify-content: center;
}

@media (max-width:650px){
    .categories-management-grid{
        grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
        gap:10px
    }
}

